--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -18,7 +18,7 @@ jobs:
     name: get supabase docker file
     permissions:
       contents: write
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
