--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -18,8 +18,8 @@ jobs:
     name: get supabase docker file
     permissions:
       contents: write
-    runs-on: ubuntu-latest
-
+    runs-on: self-hosted
+    
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
