--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -18,7 +18,7 @@ jobs:
     name: get supabase docker file
     permissions:
       contents: write
-    runs-on: self-hosted
+    runs-on: ubuntu-24.04
     
     steps:
     - name: Checkout repository
@@ -44,7 +44,7 @@ jobs:
   
   extract-docker-images:
     name: extract docker image
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs: push-supabase-docker-mirror
     permissions:
       contents: write
@@ -122,7 +122,7 @@ jobs:
   
   push-to-aliyun:
     name: push updated images to aliyun
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs: extract-docker-images
     steps:
     - name: Before freeing up disk space
