--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -8,8 +8,8 @@ on:
   workflow_dispatch:
 
 env:
-  ALIYUN_REGISTRY: "${{ secrets.ALIYUN_REGISTRY }}"
-  ALIYUN_NAME_SPACE: "${{ secrets.ALIYUN_NAME_SPACE }}"
+  ALIYUN_REGISTRY: "crpi-zw3p6lzef7gd5ljw.cn-hangzhou.personal.cr.aliyuncs.com"
+  ALIYUN_NAME_SPACE: "pessdocker/supabase"
   ALIYUN_REGISTRY_USER: "${{ secrets.ALIYUN_REGISTRY_USER }}"
   ALIYUN_REGISTRY_PASSWORD: "${{ secrets.ALIYUN_REGISTRY_PASSWORD }}"
 
